@startuml classDiagram_examplesitcasynchronous

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
left to right direction

' ============================================================================
' Application Classes
' ============================================================================

package "Itc::Asynchronous" {

    class "example.cpp" as exampleApp <<application>>

    class IRateResponse <<abstract>> {
        + response(msg : RateMsg&) : void
    }

    class Client {
        + Client(clientsEventQueue : IQueue&, serverSAP : IRateRequest::SAP&, flashRatesMs : uint32_t[], flashRatesCount : unsigned, shutdownSignal : Semaphore&)
        + request(msg : OpenMsg&) : void
        + request(msg : CloseMsg&) : void
        + response(msg : RateMsg&) : void
    }

    IRateResponse -[hidden]down- Client
}

' ============================================================================
' Kit Classes  (right column, stacked vertically)
' ============================================================================

package "Kit::EventQueue" {
    class "Server" as EqServer
}

package "Itc::Synchronous" {
    class "Server" as SyncServer
    class "IRateRequest" as IRateRequest
}

package "Kit::Itc" {
    class OpenCloseSync
    class ResponseMessage

    OpenCloseSync -[hidden]down- ResponseMessage
}

package "Kit::System" {
    class Timer
    class Thread
    class Shutdown
    class Semaphore

    Timer  -[hidden]down- Thread
    Thread -[hidden]down- Shutdown
    Shutdown -[hidden]down- Semaphore
}

' ============================================================================
' Layout hints
' ============================================================================

EqServer      -[hidden]down-  OpenCloseSync
ResponseMessage -[hidden]down- Timer

' ============================================================================
' Inheritance
' ============================================================================

Client --|> IRateResponse
Client --|> OpenCloseSync
Client --|> Timer

' ============================================================================
' example.cpp usage / composition relationships
' ============================================================================

exampleApp *--  Client          : client_
exampleApp *--  SyncServer      : myServer_
exampleApp *--  EqServer        : mbox_
exampleApp *--  Semaphore       : shutdownSignal_
exampleApp ..>  Thread          : create / destroy
exampleApp ..>  Shutdown        : notifyShutdownHandlers()
Client ..>      SyncServer      : Rate Server
Client ..>      ResponseMessage : m_rateResponseMsg
Client ..>      Semaphore : signals
IRateResponse ..> IRateRequest  : RateMsg

@enduml
